--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,6 +8,7 @@
     <link rel="stylesheet" href="./assets/css/style.css">
     <script defer src="./assets/js/app.js"></script>
 </head>
+
 <body>
 
     <!-- <p id="timer">00:00:00</p>
@@ -14,50 +16,44 @@
     <button id="stop">Stop</button> -->
 
 
-    <div class="input_search">
-        <input type="text" id="search" placeholder="Axtaris et">
-    </div>
-    <table id="data" border="1">
-        <tr>
-            <th>Ad</th>
-            <th>Soyad</th>
-            <th>Yaş</th>
-        </tr>
-        <tr>
-            <td>Adil</td>
-            <td>Hesenov</td>
-            <td>30</td>
-        </tr>
-        <tr>
-            <td>Subhan</td>
-            <td>Qasimov</td>
-            <td>25</td>
-        </tr>
-        <tr>
-            <td>Amir</td>
-            <td>Muradov</td>
-            <td>58</td>
-        </tr>
-        <tr>
-            <td>Necef</td>
-            <td>Kerimov</td>
-            <td>35</td>
-        </tr>
-        <tr>
-            <td>Saleh</td>
-            <td>Selimov</td>
-            <td>17</td>
-        </tr>
-        <tr>
-            <td>Musfiq</td>
-            <td>Ibrahimov</td>
-            <td>27</td>
-        </tr>
-        <tr>
-            <td>Fikret</td>
-            <td>Aliyev</td>
-            <td>19</td>
-        </tr>
-    </table>
+    <section>
+        <div class="input_search">
+            <div class="container">
+                <input type="text" id="search" placeholder="Axtaris et">
+                <button class="elave_et">Əlavə et</button>
+            </div>
+        </div>
+        <table id="data" border="1">
+            <div class="container">
+                <tr>
+                    <th>Ad</th>
+                    <th>Soyad</th>
+                    <th>Yaş</th>
+                </tr>
+                <tr>
+                    <td>Adil</td>
+                    <td>Hesenov</td>
+                    <td>30</td>
+                </tr>
+                <tr>
+                    <td>Subhan</td>
+                    <td>Qasimov</td>
+                    <td>25</td>
+                </tr>
+                <tr>
+                    <td>Necef</td>
+                    <td>Kerimov</td>
+                    <td>35</td>
+                </tr>
+            </div>
+        </table>
+        <div class="container">
+            <input type="text" class="name" placeholder="Name">
+            <input type="text" class="name" placeholder="Surname">
+            <input type="text" class="name" placeholder="Age">
+            <button class="add">Add</button>
+        </div>
+    </section>
 </body>
+
 </html>
