--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
         <div class="input_search">
             <div class="container">
                 <input type="text" id="search" placeholder="Axtaris et">
-                <button class="elave_et">Əlavə et</button>
+                <button class="elave_et">Search</button>
             </div>
         </div>
         <table id="data" border="1">
